# qide-dam-v2

./: .coderabbit.yaml  .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
.scannerwork/: report-task.txt
alembic/: env.py
alembic/versions/: 20260427_001_initial.py  20260428_002_webhooks_uploads.py  20260428_003_collections_workflows.py  20260506_004_v3_vault_audit_security.py  20260509_005_widen_multipart_upload_id.py  20260510_006_assets_folder_id.py  20260512_009_crm_core.py  20260513_007_intake_jobs.py  20260513_008_social_accounts.py  20260513_010_assets_sha256_strict.py  20260513_011_r2_orphans.py  20260514_012_assets_sha256_check.py  20260514_013_assets_sha256_not_null.py  20260515_014_qidematrix_core.py  20260515_015_qidematrix_social_matrix.py  20260515_016_qidematrix_topic_monitor.py  20260521_017_qidematrix_v1_pipeline.py  20260521_018_qm_metadata_column_rename.py
app/: __init__.py  main.py
app/api/: img.py
app/api/v1/: __init__.py  assets.py  audit.py  auth.py  collections.py  consolidate.py  folders.py  health.py  intake.py  projects.py  search.py  share_links.py  social.py  tenants.py  uploads.py  usage.py  users.py  vault.py  webhooks.py  wecom.py  workflows.py
app/api/v1/crm/: __init__.py  accounts.py  activities.py  contacts.py  dashboard.py  deals.py  emails.py  leads.py  quotes.py
app/api/v1/qidematrix/: __init__.py  diagnostics.py  health.py  onboardings.py  orders.py  pipeline.py  social.py  sso.py  subscriptions.py  (+2 more)
app/core/: config.py  deps.py  logging.py  security.py
app/db/: base.py  session.py
app/mcp/: crm_tools.py  http_server.py  server.py
app/models/: __init__.py  api_key.py  asset.py  audit.py  collection.py  folder.py  intake.py  project.py  r2_orphan.py  share_link.py  social.py  tenant.py  usage_meter.py  user.py  vault.py  webhook.py  workflow.py
app/models/crm/: __init__.py  account.py  activity.py  contact.py  deal.py  lead.py  quote.py
app/models/qidematrix/: __init__.py  health.py  order.py  pipeline.py  social.py  subscription.py  topic_monitor.py  workflow.py  workspace.py
app/schemas/: __init__.py  asset.py  auth.py  collection.py  common.py  folder.py  intake.py  project.py  search.py  share_link.py  tenant.py  upload.py  usage.py  user.py  vault.py  webhook.py  workflow.py
app/schemas/crm/: account.py  contact.py  deal.py  lead.py  quote.py
app/schemas/qidematrix/: __init__.py  pipeline.py
app/services/: ai_service.py  asset_service.py  audit_service.py  collection_service.py  folder_service.py  image_transform_service.py  intake_prompts.py  intake_service.py  search_service.py  share_link_service.py  social_credential_service.py  social_oauth_service.py  social_publisher.py  storage.py  upload_service.py  usage_service.py  vault_service.py  webhook_service.py  wecom_crypto.py  wecom_service.py  workflow_service.py
app/services/crm/: README.md  __init__.py  accounts_service.py  activities_service.py  ai_enrichment_service.py  classification.py  contacts_service.py  dam_integration_service.py  dashboard_service.py  deals_service.py  email_service.py  leads_service.py  quotes_service.py
app/services/qidematrix/: __init__.py  adspower_client.py  dam_provisioning_service.py  diagnostic_prompts.py  diagnostic_service.py  email_service.py  email_templates.py  fulfillment_service.py  onboarding_service.py  pipeline_service.py  quote_service.py  reddit_client.py  social_matrix_service.py  sso_service.py  subscription_service.py  topic_monitor_service.py  workspace_service.py
app/workers/: _async_db.py  _db.py  celery_app.py  tasks_ai.py  tasks_cleanup.py  tasks_document.py  tasks_image.py  tasks_intake.py  tasks_pipeline.py  tasks_qm_dam_provisioning.py  tasks_qm_diagnostic.py  tasks_qm_email.py  tasks_qm_health.py  tasks_qm_pipeline.py  tasks_social.py  tasks_topic_monitor.py  tasks_video.py  tasks_webhook.py
docker/: Dockerfile
docs/: BACKUP.md  COWORK_WATCHER.md  DEPLOY.md
scripts/: _deploy_phase_2345.sh  _fix_ruff_residual.sh  _install_sonarqube_local.sh  backfill_asset_sha256.py  backup_pg.sh  backup_secrets.sh  bootstrap_hetzner.sh  build_xiangyue_manifest.py  cowork_dam_watcher.py  finalize_sha256_strict.py  init_db.py  install_backups.sh  install_cowork_watcher_macos.sh  migrate_xiangyue.py  qm_v1_smoke_test.sh  restore_pg.sh  smoke_test.sh  topic_monitor_run.py  verify_secret_boundary.sh
tests/: conftest.py  test_image_transform.py  test_smoke.py  test_sprints_234.py  test_v3_security.py
tests/crm/: test_classification.py  test_classification_advanced.py  test_deals_pipeline.py  test_leads_service.py  test_quotes_service.py
tests/intake/: test_intake_prompts.py  test_intake_tasks.py
