[project]
name = "qide-dam"
version = "2.0.0"
description = "Qide Digital Asset Management — AI-native multi-tenant DAM platform"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",

    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",  # for alembic sync
    "pgvector>=0.3.6",

    # Cache / queue
    "redis>=5.2.0",
    "celery>=5.4.0",
    "flower>=2.0.1",
    "pycryptodome>=3.20.0",  # WeCom callback AES-CBC 解密

    # Object storage (S3 protocol — works for R2 / MinIO / OSS)
    "boto3>=1.35.0",
    "aioboto3>=13.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    # bcrypt 4.1+ removed __about__.__version__ which passlib 1.7.4 still reads —
    # pin to <4.1 until passlib ships the fix in 1.7.5.
    "bcrypt>=4.0,<4.1",

    # Settings / validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",

    # Logging
    "structlog>=24.4.0",

    # MCP (Model Context Protocol) — official Python SDK
    "mcp>=1.1.0",

    # Misc
    "httpx>=0.28.0",
    "python-magic>=0.4.27",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

ai = [
    # AI auto-tagging — added in Sprint 3 but pinned here so deps are stable
    "openai>=1.55.0",
    "dashscope>=1.20.0",  # 通义千问
    "sentence-transformers>=3.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "docker*", "scripts*", "tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL"]
ignore = [
    "E501",      # line length (handled by Black/formatter)
    "PLR2004",   # magic numbers
    "PLR0913",   # too many arguments
    "PLR0912",   # too many branches
    "PLR0915",   # too many statements
    "B008",      # function call in default arg — required by FastAPI Depends/Query
    "B904",      # raise from in except — too noisy for this codebase
    "N818",      # exception name — minor style preference
    "UP007",     # X | Y union — we use both styles intentionally
    "PLC0415",   # import outside top-level — used to break circular imports / lazy load
    "PLW0603",   # global statement — used for lazy singletons (engine / client)
    "N806",      # non-lowercase var in function — common for class aliases (PdfReader)
    "PLR0911",   # too many return statements
    "PLW1510",   # subprocess.run without check — best-effort calls in workers
    "PLW2901",   # redefined loop name
    "UP017",     # datetime.UTC alias — Python 3.11+ feature, optional style
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
